# datatistik-axum

./: .env.example  Cargo.toml  README.md
migrations/2025-12-25-075417-0000_website_and_news/: down.sql  up.sql
src/: db.rs  envs.rs  main.rs  schema.rs
src/middlewares/: mod.rs  response.rs
src/news/: controller.rs  mod.rs  model.rs  routes.rs
src/websites/: mod.rs  website_category.rs
