[package]
name = "datatistik-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
async = "0.0.0"
axum = "0.8.8"
chrono = {version = "0.4.42", features = ["serde"]}
diesel = { version = "2.3.5", features = ["chrono", "postgres", "uuid", "serde_json"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8", "deadpool"] }
dotenvy = "0.15.7"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.147"
tokio = {version = "1.48.0", features = ["full"]}
uuid = {version = "1.19.0", features = ["serde", "v4"]}
validator = {version = "0.20.0", features = ["derive"]}
